--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0px;
     padding: 0px;
@@ -13,7 +13,7 @@
 @media (min-width: 1024px) {}
 
 main {
-    background-color: #ededed;
+    background-color: #686369;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
@@ -43,11 +43,13 @@ main {
     justify-content: center;
     border: 1px solid black;
     padding: 5px;
+    color: white;
 }
 
 .detalle li {
     list-style: none;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
+    color: white;
 }
 
 .lista-detalle {
@@ -57,7 +59,7 @@ main {
 
 .item li {
     list-style: none;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
 
@@ -77,17 +79,19 @@ main {
 
 .resumen {
     display: flex;
-    background-color: #DC191B;
+    background-color: #0077B6;
     flex-wrap: wrap;
     width: 40%;
     justify-content: flex-end;
     margin-right: 20px;
     margin-bottom: 25px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 1px black;
 }
 
 .info-resumen {
     display: flex;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     border-bottom: 2px solid black;
     width: 100%;
     margin-top: 30px;
