--- a/public/css/categorias.css
+++ b/public/css/categorias.css
@@ -1,14 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {}
+@media (min-width: 320px) and (max-width: 767px) {
+    main section {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    main section article {
+        margin-bottom: 3vh;
+        margin-top: 3vh;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        background-color: #0077B6;
+        width: 70%;
+        border-radius: 100px;
+        height: 225px;
+    }
+}
 
-@media (min-width: 768px) and (max-width: 1023px) {}
+@media (min-width: 768px) and (max-width: 1023px) {
+    main section {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    main section article {
+        margin-bottom: 3vh;
+        margin-top: 3vh;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        background-color: #0077B6;
+        width: 49%;
+        border-radius: 100px;
+    }
+}
 
 @media (min-width: 1024px) {
     main section {
@@ -21,40 +52,15 @@
         margin-left: auto;
         margin-right: auto;
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
-        background-color: #DC191B;
+        background-color: #0077B6;
         width: 32%;
         border-radius: 100px;
     }
-    .descr {
-        font-size: 20px;
-        color: black;
-        font-family: 'Quicksand', sans-serif;
-        margin-top: 1vh;
-        margin-bottom: 1vh;
-        margin-left: 2vw;
-    }
-    .precios {
-        font-size: 28px;
-        margin-right: 5px;
-        color: #0f1618;
-        font-family: 'Ubuntu', sans-serif;
-        font-weight: bold;
-        margin-top: 1vh;
-        margin-bottom: 1vh;
-        margin-left: 2vw;
-    }
-    main h1 {
-        text-align: center;
-        margin-top: 6vh;
-        margin-bottom: 4vh;
-        font-family: 'Ubuntu', sans-serif;
-        width: 100%;
-        font-size: 45px;
-    }
+
 }
 
 main {
-    background-color: #ededed;
+    background-color: #686369;
 }
 
 main section a {
@@ -68,11 +74,6 @@ main section article img {
     height: 100%;
     max-height: 400px;
     display: block;
-    border-bottom: 1px solid #ededed;
+    border-bottom: 1px solid #686369;
     border-radius: 100px;
-}
-
-main section article div {
-    display: flex;
-    flex-direction: column;
 }
