--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,19 +1,69 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {}
+@media (min-width: 320px) and (max-width: 767px) {
 
-@media (min-width: 768px) and (max-width: 1023px) {}
+    .secIzquierdo {
+        width: 60%;
+    }
+    .secDerecho{
+        width: 40%;
+    }
+    .listaMenu li {
+        margin-top: 4px;
+        margin-bottom: 4px;
+        font-size: 15px;
+    }
+    .listaRedes i {
+        font-size: 25px;
+        margin-top: 25px;
+        margin-right: 5px;
+        margin-left: 5px;
+    }
+    footer h3 {
+        margin-top: 8px;
+        margin-bottom: 8px;
+        font-size: 13px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+    .secIzquierdo {
+        width: 60%;
+    }
+    .secDerecho{
+        width: 40%;
+    }
+    .listaMenu li {
+        margin-top: 4px;
+        margin-bottom: 4px;
+    }
+    .listaRedes i {
+        font-size: 30px;
+        margin-top: 25px;
+        margin-right: 5px;
+        margin-left: 5px;
+    }
+    footer h3 {
+        margin-top: 8px;
+        margin-bottom: 8px;
+        font-size: 25px;
+    }
+
+}
 
 @media (min-width: 1024px) {
     footer {
         height: 30vh;
-        display: flex;
+        
     }
     footer h3 {
         margin-top: 8px;
@@ -30,23 +80,30 @@
         margin-right: 5px;
         margin-left: 5px;
     }
+
+    .secIzquierdo {
+        width: 60%;
+    }
+
+    .secDerecho{
+        width: 40%;
+    }
 }
 
 footer {
     background-image: url(../img/banner-footer.jpg);
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
 }
 
 .secIzquierdo {
     display: flex;
     flex-wrap: wrap;
-    width: 60%;
 }
 
 .secDerecho {
     display: flex;
     flex-wrap: nowrap;
-    width: 40%;
     flex-direction: column;
 }
 
@@ -76,7 +133,7 @@ footer {
     justify-content: space-around;
     align-items: center;
     list-style: none;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     width: 100%;
 }
 
@@ -88,7 +145,7 @@ footer {
     justify-content: center;
     align-items: center;
     list-style: none;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     width: 100%;
 }
 
