--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,18 +1,98 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {}
+@media (min-width: 320px) and (max-width: 767px) {
+    .secHeader{
+        flex-direction: column;
+        align-items: center;
+        background: linear-gradient(to right, #0077B6, #0F1618);
+    }
 
-@media (min-width: 768px) and (max-width: 1023px) {}
+    header img{
+        max-width: 100px;
+        max-height: 100px;
+    }
+
+    .secLogo{
+        width: 100%;
+        height: 100%;
+        
+    }
+
+    .secMenu {
+        width: 100%;
+        height: 100%;
+    }
+
+    .secCarrito {
+        margin: 5vh 0px;
+        width: 50%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+    .secHeader{
+        flex-direction: column;
+        align-items: center;
+        background: linear-gradient(to right, #0077B6, #0F1618);
+    }
+
+    header img{
+        max-width: 100px;
+        max-height: 100px;
+    }
+
+    .secLogo{
+        width: 100%;
+        height: 100%;
+        
+    }
+
+    .secMenu {
+        width: 100%;
+        height: 100%;
+    }
+
+    .secCarrito {
+        margin: 5vh 0px;
+    }
+
+}
 
 @media (min-width: 1024px) {
     header {
         height: 20vh;
+    }
+
+    .secHeader{
+        height: 100%;
+    }
+
+    header img {
+        height: 100%;
+    }
+
+    .secLogo{
+        width: 20%;
+        height: 100%;
+        background: linear-gradient(to left, #0077B6, #0F1618);
+    }
+
+    .secMenu {
+        width: 60%;
+        height: 100%;
+        background-color: #0077B6;
+        background: linear-gradient(to right, #0077B6, #0F1618);
+    }
+
+    .secCarrito{
+        width: 20%;
     }
 }
 
@@ -25,10 +105,6 @@ header i {
     font-size: 30px;
 }
 
-header img {
-    height: 100%;
-}
-
 .linkLogo {
     height: 100%;
     padding: 20px;
@@ -37,39 +113,31 @@ header img {
 .secHeader {
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
 }
 
 .secLogo {
-    width: 20%;
-    height: 100%;
     display: flex;
     justify-items: center;
     align-items: center;
     justify-content: center;
     align-content: center;
-    background: linear-gradient(to left, #DC191B, #0F1618);
 }
 
 .secMenu {
-    width: 60%;
-    height: 100%;
     display: flex;
     align-content: center;
     align-items: center;
-    background-color: #DC191B;
-    background: linear-gradient(to right, #DC191B, #0F1618);
 }
 
 .secCarrito {
-    width: 20%;
+    
     height: 100%;
     display: flex;
     justify-items: center;
     align-items: center;
     justify-content: space-around;
     align-content: center;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
 }
 
 .lista {
@@ -79,7 +147,7 @@ header img {
     justify-content: space-around;
     align-items: center;
     list-style: none;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     width: 100%;
 }
 
