--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,21 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {}
+@media (min-width: 320px) and (max-width: 767px) {
+    .noticias {
+        display: none;
+     }
+     .titulo-noticias {
+         display: none;
+     }
+     .main-banner{
+        height: 30vh;
+    }
+    .categorias-container{
+        padding: 30px 10px;
+    }
+}
 
-@media (min-width: 768px) and (max-width: 1023px) {}
+@media (min-width: 768px) and (max-width: 1023px) {
+    .texto-noticia {
+       display: none;
+    }
 
-@media (min-width: 1024px) {}
+    .noticias {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: auto;
+        justify-content: space-around;
+        padding-bottom: 15px;
+    }
+
+    
+    .titulo-noticias {
+        font-size: 30px;
+        font-family: 'Bebas', sans-serif;
+        text-align: center;
+        margin-bottom: 15px;
+        color: white;
+    }
+    .main-banner{
+        height: 60vh;
+    }
+    .categorias-container{
+        padding: 30px 50px 30px 50px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .texto-noticia {
+        font-family: 'Montserrat', sans-serif;
+        color: white
+    }
+
+    .noticias {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: auto;
+        justify-content: space-around;
+        padding-bottom: 15px;
+    }
+
+    
+    .titulo-noticias {
+        font-size: 30px;
+        font-family: 'Bebas', sans-serif;
+        text-align: center;
+        margin-bottom: 15px;
+        color: white;
+    }
+    .main-banner{
+        height: 60vh;
+    }
+    .categorias-container{
+        padding: 30px 50px 30px 50px;
+    }
+}
 
 main {
     width: 100%;
     height: auto;
-    background-color: #EDEDED;
+    background-color: #686369;
 }
 
 .banner-container {
@@ -25,19 +95,19 @@ main {
 
 .main-banner {
     width: 100vw;
-    height: 60vh;
     object-fit: cover;
 }
 
 .categorias-container {
-    padding: 30px 50px 30px 50px;
+    
     display: flex;
     flex-wrap: wrap;
 }
 
 .categorias-container article {
     margin-bottom: 30px;
-    width: 50%;
+    width: 100%;
+    height: 30vh;
     position: relative;
     overflow: hidden;
 }
@@ -51,13 +121,14 @@ main {
 }
 
 .categorias-container .text-btn {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Bebas', sans-serif;
     position: relative;
     font-size: 12px;
     letter-spacing: 3px;
-    color: #fff;
+    color: black;
     border: 1px solid;
-    background-color: transparent;
+    background-color: white;
+    opacity: 0.8;
     padding: 8px 20px 8px 24px;
     border-radius: 50px;
     cursor: pointer;
@@ -87,30 +158,23 @@ main {
     transition: all 1s ease-out;
 }
 
-.noticias {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto;
-    justify-content: space-around;
-}
-
 .noticias article {
     width: 24%;
     height: 100%;
     padding: 5px;
     position: relative;
     overflow: hidden;
+    background-color: #0077B6;
+    box-shadow: 2px 2px 5px #999;
 }
 
 .noticias article h2 {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     margin-bottom: 5px;
+    color: white
 }
 
-.texto-noticia {
-    font-family: 'Quicksand', sans-serif;
-}
+
 
 .informacion {
     height: 45vh;
@@ -120,11 +184,4 @@ main {
     object-fit: cover;
     height: 250px;
     width: 100%;
-}
-
-.titulo-noticias {
-    font-size: 30px;
-    font-family: 'Ubuntu', sans-serif;
-    text-align: center;
-    margin-bottom: 15px;
 }
