--- a/public/css/modify.css
+++ b/public/css/modify.css
@@ -13,7 +13,7 @@
 @media (min-width: 1024px) {}
 
 main {
-    background-color: #EDEDED;
+    background-color: #686369;
     display: flex;
     width: 100%;
     justify-content: center;
@@ -88,7 +88,7 @@ main {
 }
 
 .file-select::before {
-    background-color: #DC191B;
+    background-color: #0077B6;
     color: white;
     display: flex;
     justify-content: center;
@@ -99,6 +99,7 @@ main {
     right: 0;
     top: 0;
     bottom: 0;
+    border-radius: 15px;
 }
 
 .file-select input[type="file"] {
@@ -116,13 +117,14 @@ main {
 .boton {
     height: 8vh;
     width: 18vw;
-    background-color: #DC191B;
+    background-color: #0077B6;
     color: white;
-    border: 1px solid #DC191B;
+    border: 1px solid #0077B6;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     font-size: 15px;
     margin-top: 3vh;
+    border-radius: 15px;
 }
 
 .guardar {
@@ -156,6 +158,7 @@ main {
 
 h3 {
     margin-top: 15px;
+    color: white
 }
 
 .btnEliminar {
