--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,19 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {}
+@media (min-width: 320px) and (max-width: 767px) {
+    .registro{
+        flex-direction: column;
+    }
+    .izq-campos{
+        width: 100%;
+    }
+    .der-img{
+        width: 100%;
+    }
+    .boton {
+        height: 8vh;
+        width: 50vw;
+    }
+}
 
-@media (min-width: 768px) and (max-width: 1023px) {}
+@media (min-width: 768px) and (max-width: 1023px) {
+    .registro{
+        flex-direction: row;
+    }
+    .izq-campos{
+        width: 50%;
+    }
+    .der-img{
+        width: 50%;
+    }
+    .boton {
+        height: 8vh;
+        width: 18vw;
+    }
+}
 
-@media (min-width: 1024px) {}
+@media (min-width: 1024px) {
+    .registro{
+        flex-direction: row;
+    }
+    .izq-campos{
+        width: 50%;
+    }
+    .der-img{
+        width: 50%;
+    }
+    .boton {
+        height: 8vh;
+        width: 18vw;
+    }
+}
 
 main {
-    background-color: #EDEDED;
+    background-color: #686369;
 }
 
 form {
@@ -26,15 +68,15 @@ form {
     display: flex;
     width: 85%;
     flex-wrap: wrap;
-    background-color: #DC191B;
+    background-color: #0077B6;
     margin: 15px;
-    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 1px black;
 }
 
 .izq-campos {
     display: flex;
     flex-direction: column;
-    width: 50%;
     align-items: center;
     padding: 15px;
 }
@@ -42,7 +84,6 @@ form {
 .der-img {
     display: flex;
     flex-direction: column;
-    width: 50%;
     justify-content: center;
     align-items: center;
 }
@@ -77,13 +118,13 @@ form {
 h3 {
     margin-top: 5vh;
     margin-bottom: 1vh;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     font-size: 13px;
 }
 
 h1 {
     text-align: center;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     font-size: 40px;
 }
 
@@ -91,26 +132,26 @@ h1 {
     margin-top: 3vh;
     list-style: none;
     color: white;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     justify-content: center;
     align-items: center;
 }
 
 .mensaje-error {
     color: white;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
 }
 
 .boton {
-    height: 8vh;
-    width: 18vw;
     background-color: #0f1618;
     color: white;
     border: 1px solid #0f1618;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
     font-weight: bold;
     font-size: 15px;
     margin-top: 3vh;
+    border-radius: 15px;
+
 }
 
 .file-select {
@@ -121,6 +162,7 @@ h1 {
 
 .file-select::before {
     background-color: #0f1618;
+    border-radius: 15px;
     color: white;
     display: flex;
     justify-content: center;
@@ -142,5 +184,5 @@ h1 {
 
 #src-file1::before {
     content: 'Seleccionar Imagen';
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Bebas', sans-serif;
 }
