--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -36,9 +36,9 @@
                     </section>
 
                     <section class="der-img">
-                        <img src="/img/profiles/default.jpg" alt="">
+                        <img src="/img/profiles/default.jpg" id="preview" alt="">
                         <div class="file-select" id="src-file1">
-                            <input type="file" name="imagen" aria-label="Archivo">
+                            <input type="file" id="file"name="imagen" aria-label="Archivo">
                         </div>
 
                         <% if (locals.errorimagen && errorimagen.imagen) { %>
