--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -105,6 +105,7 @@ footer {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
+    align-items: center;
 }
 
 .secListados {
@@ -149,9 +150,9 @@ footer {
     width: 100%;
 }
 
-footer a:link,
+.itemFooter a:link,
 a:visited,
-a:active {
+a:active{
     text-decoration: none;
     color: black;
 }
